# qcmgen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  qcm.py  qcm_debug.py
qcmgen/: __main__.py  amc_commands.py  amcq.py  main.py  template_mgr.py
qcmgen/common/: debugging.py  jinja_filters.py  jinja_templating.py  logging_helpers.py  utils.py
qcmgen/resources/amc_bootstrap_template/: amc-form-cartouche.tex  amc-form-preambule.tex  amc-form-preambule.tex.jinja  sample_questiongroups.tex  source.tex  source.tex.jinja
qcmgen/resources/amc_elements_templates/: answer.tex.jinja  element.tex.jinja  group-questions.tex.jinja  question-close.tex.jinja  question-open.tex.jinja
qcmgen/resources/question-builder/: README.md  generate.py
src/qcmgen/: amcq.py  script_runner.py  template_mgr.py
src/qcmgen/common/: jinja_templating.py
src/qcmgen/resources/amc_bootstrap_template/: options.xml
src/qcmgen/resources/amc_elements_templates/: element.tex.jinja  group-questions.tex.jinja  question-close.tex.jinja  question-open.tex.jinja
src/qcmgen/resources/question-builder/: README.md
src/tests/: sample_questiongroups.tex  test_1.py  test_integrate_amcq.py
src/tests/expected/: test_out1.tex
tests/: test_integrate_amcq.py  test_render_questions_templates.py
