[project]
name = "qcmgen"
# version = "0.1.1-pre.4"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "simonAndre", email = "simon.andre2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "jinja2"
]

[project.scripts]
qcmgen = "src.qcmgen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
    "src.qcmgen/**/*.py",
    "src.qcmgen/resources/**",
    "sample.py"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"


# [[tool.uv.index]]
# name = "local_pypi"
# url = "/home/san/code/local_pypi"
# format = "flat"